Alignment corrected for static html

--- a/src/app/lv-inspection-details/lv-inspection-details.component.css
+++ b/src/app/lv-inspection-details/lv-inspection-details.component.css
@@ -1,3 +1,5 @@
+body { margin: 10px; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 .auth-form-btn {
     margin-top: 25px;
     width: 25%;
